--- a/src/components/docThumbnail-component/docThumbnail.scss
+++ b/src/components/docThumbnail-component/docThumbnail.scss
@@ -3,12 +3,12 @@
 .docThumbnailGroup {
     display: block;
     background-color: var(--docThumbnailGroup);
-    min-width: 280px;
+    min-width: auto;
     text-decoration: none;
     color: unset;
     padding: 24px;
-    border-radius: 16px;
-    box-shadow: 6px 6px 0px rgba(60, 60, 60, 0.24);
+    border-radius: 12px;
+    border: 1px solid #000000;
     transition: all .2s;
 
     &:hover {
@@ -26,8 +26,7 @@
     .contentWrapper {
 
         .img_titleWrapper {
-            display: flex;
-            align-items: center;
+            display: block;
             img {
                 margin: 0px 16px 0px 0px;
             }
@@ -49,8 +48,33 @@
         p {
             width: 100%;
             margin-top: 16px;
-            font-size: 14px;
+            font-size: 16px;
         }
     }
+}
+
+@include for-desktop-only() {
+
+    .docThumbnailGroup {
+        min-width: 280px;
+
+        .contentWrapper {
+
+            .img_titleWrapper {
+                display: flex;
+                align-items: center;
+                img {
+                    margin: 0px 16px 0px 0px;
+                }
+                h6 {
+                    font-size: 24px;
+                    margin: 0;
+                }
+            }
+
+        }
+
+    }
+
 }
 
