--- a/src/components/footer-component/footer.scss
+++ b/src/components/footer-component/footer.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/common.scss';
 
 footer {
-  margin-top: 140px;
+  margin-top: 80px;
   .footerWrapper {
     overflow: hidden;
     position: relative;
@@ -14,6 +14,7 @@ footer {
     p{
       color: #D1D1D1;
       width: 100%;
+      font-size: 24px;
       margin: 32px 0 40px 0;
     }
     span,a {
@@ -45,8 +46,10 @@ footer {
         display: flex;
         width: 100%;
         flex-wrap: wrap;
+        margin-bottom: 24px;
+
         svg {
-          margin: 0 32px 24px 0;
+          margin-right: 24px;
           transform: scale(1.5)
         }
       }
@@ -56,7 +59,8 @@ footer {
 
 @include for-tablet-only() {
   footer {
-    margin-top: 140px;
+    margin-top: 80px;
+
     .footerWrapper {
       overflow: hidden;
       position: relative;
@@ -66,11 +70,14 @@ footer {
   
       h1 {
         color: #FFFFFF;
+        text-align: center;
       }
-      p{
+
+      p {
         color: #D1D1D1;
-        width: 50%;
-        margin: 32px 0 40px 0;
+        text-align: center;
+        width: 60%;
+        margin: auto;
       }
       span,a {
         color: #D1D1D1;
@@ -81,24 +88,14 @@ footer {
         padding: 16px;
         display: block;
         width: 30%;
-        border: 1px solid  #D1D1D1;;
-      }
-
-      .magicWand {
-        display: block;
-        position: absolute;
-        top: 100px;
-        width: auto;
-        height: 450px;
-        right: 0;
-        svg {
-          transform: scale(1);
-        }
+        border: 1px solid  #D1D1D1;
       }
   
       .connectMe {
-        display: block;
-        width: 95%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        // width: 95%;
         border-top: 1px solid var(--footerline);
         margin-top: 56px;
         padding-top: 24px;
@@ -110,8 +107,8 @@ footer {
   
         div {
           width: 100%;
+          margin-bottom: 0;
           svg {
-            margin-right: 24px;
             transform: scale(1.2)
           }
         }
@@ -124,11 +121,7 @@ footer {
 
   footer {
     .footerWrapper {
-      .connectMe {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
+      padding: 6% 12% 2% 12%;
     }
   }
 
