--- a/src/components/footer-component/footer.scss
+++ b/src/components/footer-component/footer.scss
@@ -1,7 +1,7 @@
 @import 'src/styles/common.scss';
 
 footer {
-  margin-top: 80px;
+  margin-top: 0;
   .footerWrapper {
     overflow: hidden;
     position: relative;
