--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -25,7 +25,7 @@ body {
     --mobileMenuButtonText: #121212; 
     --bg: #FFFF;
     --imgUrl: url('https://res.cloudinary.com/dramages/image/upload/v1602702632/portfolioImages/homePageImages/portraitDrayLight.png');
-    --textNormal: #222;
+    --textNormal: rgb(83, 83, 83);
     --textTitle: #222;
     --headingAccent: yellow;
     --textAccent: #F8C8C8;
