--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -11,6 +11,7 @@ body {
   background-color: var(--bg);
   color: var(--textNormal);
   position: relative;
+  transition: all 0.3s ease-out;
 }
 
 h1,h2,h3,h4,h5,h6 {
