--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -197,13 +197,18 @@ $anim-speed: 1s;
 
     }
 
-    #projectFolder {
+    #portfolioFolder {
         margin-top: 40px;
         background: var(--projectFolder);
         display: block;
 
-        .titleHolder {
-            text-align: center;
+        & > div {
+            margin-top: 40px;
+
+            h1 {
+                text-align: center;
+                font-size: 28px;
+            }
         }
         
         .thumbnailWrapper {
@@ -216,13 +221,6 @@ $anim-speed: 1s;
 
             .docThumbnailGroup {
                 margin-bottom: 24px;
-            }
-
-            svg {
-                position: absolute;
-                right: 56px;
-                top: -55px;
-                z-index: 1;
             }
         }
     }
@@ -417,28 +415,39 @@ $anim-speed: 1s;
             }
         }
 
-        #projectFolder {
+        #portfolioFolder {
             background: var(--projectFolder);
             display: flex;
             flex-direction: column;
             align-items: center;
-            padding-top: 8%;
+            // padding-top: 8%;
+
+            & > div {
+                margin-top: 52px;
+            }
             
             .thumbnailWrapper {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
                 width: 100%;
                 gap: 32px;
-                padding: 0;
+                padding: 24px;
                 border-radius: 24px;
                 margin-top: 48px;
                 position: relative;
 
-                svg {
-                    position: absolute;
-                    right: 56px;
-                    top: -55px;
-                    z-index: 1;
+                & > :last-child:nth-child(odd) {
+                    grid-column: 1 / 3;
+
+                    & > div {
+                        display: flex;
+                        flex-direction: row-reverse;
+
+                        & > div {
+                            margin-right: 32px;
+                        }
+
+                    }
                 }
             }
         }
@@ -486,26 +495,8 @@ $anim-speed: 1s;
 
         }
 
-        #projectFolder {
-            
-            .thumbnailWrapper {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                width: 100%;
-                gap: 32px;
-                padding: 24px;
-                border-radius: 24px;
-                margin-top: 48px;
-                position: relative;
-
-                svg {
-                    position: absolute;
-                    right: 56px;
-                    top: -55px;
-                    z-index: 1;
-                }
-            }
-
+        #portfolioFolder {
+            padding: 0 12% 48px;
         }
 
         #AboutMe {
